@@ -1,3 +1,11 @@
+2008-03-16  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* vm/reference/java/lang/reflect/VMField.java:
+	Consistently use 'clazz' as the name of the variable
+	containing the declaring class.
+	* vm/reference/java/lang/reflect/VMMethod.java:
+	Likewise.
+	
 2008-03-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
         PR classpath/34840
